--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "./../../../../app/bootstrap.php.cache"
+    bootstrap                   = "./Tests/bootstrap.php"
 >
 
     <testsuites>
