--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0,<2.3",
-        "symfony/security-bundle": ">=2.0,<2.3",
+        "symfony/framework-bundle": "~2.0",
+        "symfony/security-bundle": "~2.0",
         "ircmaxell/password-compat": "1.0.*"
     },
     "autoload": {
