--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.0",
         "symfony/security-bundle": "~2.0",
-        "ircmaxell/password-compat": "1.0.*"
+        "ircmaxell/password-compat": "~1.0"
     },
     "autoload": {
         "psr-0": { "Elnur\\BlowfishPasswordEncoderBundle": "" }
