--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,14 @@
         "symfony/security-bundle": "~2.0",
         "ircmaxell/password-compat": "~1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7"
+    },
     "autoload": {
         "psr-0": { "Elnur\\BlowfishPasswordEncoderBundle": "" }
     },
-    "target-dir": "Elnur/BlowfishPasswordEncoderBundle"
+    "target-dir": "Elnur/BlowfishPasswordEncoderBundle",
+    "config": {
+        "bin-dir": "bin"
+    }
 }
