--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.0",
-        "symfony/security-bundle": "~2.0",
+        "symfony/security-bundle": "~2.0.25|~2.1.13|~2.2.9|~2.3.6|~2.4",
         "ircmaxell/password-compat": "~1.0"
     },
     "require-dev": {
